[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "midoriinu"
version = "0.0.1"
description = "I love dogs."
readme = "README.md"
requires-python = "==3.12.*"
authors = [{name="CookieBox26", email="cookie-box@cookie-box.info"}]
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pytorch-triton==3.4.0+git11ec6354",
    "torch==2.9.0.dev20250804+cu128",
    "vllm==0.10.1+gptoss",
    "openai-harmony",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.3.12/flash_attn-2.8.0+cu128torch2.7-cp312-cp312-linux_x86_64.whl",
]

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = [
    "https://download.pytorch.org/whl/nightly/cu128",
    "https://download.pytorch.org/whl/nightly/",
    "https://wheels.vllm.ai/gpt-oss/",
]
